--- a/crrizos/styles/carrossel.css
+++ b/crrizos/styles/carrossel.css
@@ -8,7 +8,7 @@
     padding: 1em 0 0.5em 0;
   }
   .swiper-slide img {
-    width: 10%;
+    width: 100%;
   }.swiper-button-prev,
   .swiper-button-next {
     display: none;
@@ -35,4 +35,24 @@
   }
   .botões {
     display: flex;
+  }
+  .descrição__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+  }
+  .descrição__titulo-livro {
+    color: var(--azul-degrade);
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0.5em 0;
+  }
+  .botões__ancora {
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
+  }
+  .botões__item {
+    margin: 0 0.5em;
   }
